# cloudflare_updater

./: .gitignore  .gitmodules  .pylintrc  Dockerfile  Dockerfile copy  README.md  docker-compose.yml  entrypoint.sh  example-docker-compose.yml  example.env  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: CI.yml  ci.yml  docker-publish.yml  tests.yml
app/: check_ip.py  main.py  setup_logger.py  update_ip.py
app/utilities/: env_loaders.py  send_webhooks.py
config/: pytest.ini
docker/: Dockerfile  docker-compose.yml
docs/: dev_readme.md
docs/examples/config/: .env  webhooks.yml
example_config/: webhooks.yml
examples/: .env  docker-compose.yml
scripts/: build.sh
src/: Dockerfile  check_ip.py  entrypoint.sh  entrypoint_cron.sh  main.py  send_email_notification.py  update_ip.py  web_hooks.py  webhooks.py
src/app/: check_ip.py  main.py  update_ip.py
src/cloudflare_updater/: check_ip.py  main.py  setup_logger.py  update_ip.py
src/cloudflare_updater/notify/: __init__.py  send_email_notification.py
src/cloudflare_updater/utilities/: env_handler.py  env_loaders.py  send_webhooks.py  value_verifier.py
tests/: test_env_loaders.py  test_whoami.py
